--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang_ho.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-24 17:30+0300\n"
-"PO-Revision-Date: 2013-05-25 22:40+0200\n"
+"PO-Revision-Date: 2013-05-29 22:22+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -9706,14 +9706,14 @@ msgid "Save"
 msgstr "Salva"
 
 #: ../code/application/views/helpfile/pofields.php:843
-#, fuzzy, php-format
+#, php-format
 msgid "Last name"
-msgstr "Nome"
+msgstr "Cognome"
 
 #: ../code/application/views/helpfile/pofields.php:844
 #, php-format
 msgid "Newsletter subscription"
-msgstr ""
+msgstr "Iscrizione alla newsletter"
 
 #: ../code/application/views/helpfile/pofields.php~:822
 #, php-format
