--- a/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang_he.po
+++ b/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang_he.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-24 17:30+0300\n"
-"PO-Revision-Date: 2013-05-25 21:58+0200\n"
+"PO-Revision-Date: 2013-05-29 22:07+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -9705,14 +9705,14 @@ msgid "Save"
 msgstr "Speichern"
 
 #: ../code/application/views/helpfile/pofields.php:843
-#, fuzzy, php-format
+#, php-format
 msgid "Last name"
-msgstr "Vorname"
+msgstr "Nachname"
 
 #: ../code/application/views/helpfile/pofields.php:844
 #, php-format
 msgid "Newsletter subscription"
-msgstr ""
+msgstr "Newsletter-Abonnement"
 
 #: ../code/application/views/helpfile/pofields.php~:822
 #, php-format
@@ -9775,12 +9775,10 @@ msgid "Number of nights:"
 msgstr "Anzahl der Übernachtungen:"
 
 #: ../code/application/views/mustache/save_property_dialog.php:38
-#, fuzzy
 msgid "character left"
 msgstr "Buchstaben übrig:"
 
 #: ../code/application/views/mustache/save_property_dialog.php:39
-#, fuzzy
 msgid "characters left"
 msgstr "Buchstaben übrig:"
 
