--- a/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-24 17:30+0300\n"
-"PO-Revision-Date: 2013-05-25 22:41+0200\n"
+"PO-Revision-Date: 2013-05-29 22:39+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -9082,7 +9082,7 @@ msgstr "Tärkeää tietoa"
 #: ../code/application/views/helpfile/pofields.php~:745
 #, php-format
 msgid "Property name"
-msgstr "Kiinteistön nimi"
+msgstr "Majoituksen nimi"
 
 #: ../code/application/views/helpfile/pofields.php:747
 #: ../code/application/views/helpfile/pofields.php~:747
@@ -9320,8 +9320,8 @@ msgid ""
 "By clicking \"Create Account\" you confirm that you accept the Terms of "
 "Service and Privacy Policy."
 msgstr ""
-"Painaamalla \"Luo Tili\" varmistat sen että hyväksyt Käyttöehdot ja Yksityis "
-"suojan."
+"Painaamalla ``Luo Tili`` varmistat että olet hyväksynyt Palvelun Ehdot ja "
+"Yksityis Suojan."
 
 #: ../code/application/views/helpfile/pofields.php:801
 #: ../code/application/views/helpfile/pofields.php:835
@@ -9482,29 +9482,29 @@ msgstr ""
 "listaa, varmistakseen palvelujen saatavuus."
 
 #: ../code/application/views/helpfile/pofields.php:831
-#, fuzzy, php-format
+#, php-format
 msgid "Existing account"
-msgstr "Luo tili"
+msgstr "Olemassaoleva tili"
 
 #: ../code/application/views/helpfile/pofields.php:832
-#, fuzzy, php-format
+#, php-format
 msgid "Create new account"
-msgstr "Luo tili"
+msgstr "Luo uusi tili"
 
 #: ../code/application/views/helpfile/pofields.php:833
 #, php-format
 msgid "New password"
-msgstr ""
+msgstr "Uusi salasana"
 
 #: ../code/application/views/helpfile/pofields.php:836
 #, php-format
 msgid "Show room types"
-msgstr ""
+msgstr "Näytä huone tyypit"
 
 #: ../code/application/views/helpfile/pofields.php:837
 #, php-format
 msgid "Hide room types"
-msgstr ""
+msgstr "Peitä huone tyypit"
 
 #: ../code/application/views/helpfile/pofields.php:838
 #, php-format
@@ -9512,15 +9512,17 @@ msgid ""
 "We are sorry but the maximum number of favorite properties you can save to "
 "your account is 30"
 msgstr ""
+"Olemme pahoillaan mutta maksimum määrä suosikki majoituksia jota voit "
+"tallentaa tilillesi on 30"
 
 #: ../code/application/views/helpfile/pofields.php:839
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "This property has been saved in your \"My account\" section. You can now "
 "easily book it at a later date if you wish."
 msgstr ""
-"Voit tallentaa tämän majoituksen tilillesi suosikki listaan  niin myöhemmin "
-"saat sen helpommin varattua."
+"Tämä majoitus on tallennettu \"Minun tili\" osastoon. Nyt voit helposti "
+"varata tämän toisena päivänä jos niin toivot."
 
 #: ../code/application/views/helpfile/pofields.php:840
 #, php-format
@@ -9596,15 +9598,13 @@ msgstr ""
 
 #: ../code/application/views/mustache/save_property_dialog.php:19
 #: ../code/application/views/mustache/saved_property_item.php:11
-#, fuzzy
 msgid "Arrival:"
-msgstr "Saapumispäivä"
+msgstr "Saapuminen:"
 
 #: ../code/application/views/mustache/save_property_dialog.php:25
 #: ../code/application/views/mustache/saved_property_item.php:11
-#, fuzzy
 msgid "Number of nights:"
-msgstr "Vieraitten määrä"
+msgstr "Yöt:"
 
 #: ../code/application/views/mustache/save_property_dialog.php:38
 #, fuzzy
@@ -9622,9 +9622,8 @@ msgid "Update Note"
 msgstr "Päivitä Muistiinpanot"
 
 #: ../code/application/views/mustache/save_property_dialog.php:50
-#, fuzzy
 msgid "Save Note"
-msgstr "Päivitä Muistiinpanot"
+msgstr "Tallenna Muistiinpanot"
 
 #: ../code/application/views/mustache/property_list.php:9
 msgid "Info"
@@ -9690,39 +9689,33 @@ msgid "Accept terms and conditions agreement to proceed"
 msgstr "Hyväksy sopimusehdot jatkaaksesi"
 
 #: ../code/application/controllers/cmain.php:2285
-#, fuzzy
 msgid "Please log in"
-msgstr "Valitse tästä"
+msgstr "Ole hyvä ja kirjaudu sisään"
 
 #: ../code/application/controllers/cmain.php:2311
-#, fuzzy
 msgid "Invalid property"
-msgstr "Annetun tiedon muoto ei kelpaa"
+msgstr "Pätemätön majoitus"
 
 #: ../code/application/controllers/cmain.php:2349
-#, fuzzy
 msgid "Property not found"
-msgstr "Kohdenumero"
+msgstr "Majoitusta ei löytynyt"
 
 #: ../code/application/controllers/cmain.php:2358
-#, fuzzy
 msgid "Property is favorite already"
-msgstr "Tallenna tämä majoitus suosikkina"
+msgstr "Majoitus on jo suosikkina"
 
 #: ../code/application/controllers/cmain.php:2367
-#, fuzzy
 msgid "Invalid number of nights"
-msgstr "Puhelinnumeron muoto ei kelpaa"
+msgstr "Pätemätön määrä öitä"
 
 #: ../code/application/controllers/cmain.php:2384
-#, fuzzy
 msgid "Invalid date"
-msgstr "Annetun tiedon muoto ei kelpaa"
+msgstr "Pätemätön päivämäärä"
 
 #: ../code/application/controllers/cmain.php:2391
 #, php-format
 msgid "Notes are exceeding maximum of %d chars"
-msgstr ""
+msgstr "Muistiinpanot ei voi ylittää %d merkkiä"
 
 #: ../code/application/controllers/chostelbk.php:299
 #: ../code/application/controllers/chostelbk.php:337
