--- a/languages/ci/locale/pt_PT/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pt_PT/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-24 17:30+0300\n"
-"PO-Revision-Date: 2013-04-29 21:30+0200\n"
+"PO-Revision-Date: 2013-05-29 22:33+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -1571,9 +1571,8 @@ msgid "Réservation de groupes"
 msgstr "Reservas de grupos"
 
 #: ../code/application/views/includes/save_property.php:13
-#, fuzzy
 msgid "Save this property as favorite"
-msgstr "Salvar essa propriedade como favorito"
+msgstr "Salvar essa propriedade como favorita"
 
 #: ../code/application/views/mobile/auth/change_email_form.php:40
 #: ../code/application/views/helpfile/pofields.php:246
@@ -3546,7 +3545,7 @@ msgstr "Data"
 
 #: ../code/application/views/restricted/user_favorite_properties.php:24
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 #: ../code/application/views/restricted/user_favorite_properties.php:40
 #: ../code/application/views/city_view.php:210
@@ -9570,18 +9569,17 @@ msgid "Saved favorite properties"
 msgstr "Salvar propriedades favoritas"
 
 #: ../code/application/views/helpfile/pofields.php:823
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d%% of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d%%) is payable upon arrival. You "
 "will find the property's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-"Você apenas faz o depósito (%d do valor total) para confirmar e assegurar a "
-"sua reserva agora. O valor restante (%d) é pago na chegada. Você irá "
+"Você apenas faz o depósito (%d%% do valor total) para confirmar e assegurar "
+"a sua reserva agora. O valor restante (%d%%) é pago na chegada. Você irá "
 "encontrar informações de contato do proprietário (e-mail, endereço, número "
-"de telefone...) no seu e-mail de confirmação depois de ter feito a sua "
-"reserva."
+"de telefone…) no seu e-mail de confirmação depois de ter feito a sua reserva."
 
 #: ../code/application/views/helpfile/pofields.php:825
 #: ../code/application/views/helpfile/pofields.php~:825
@@ -9598,31 +9596,37 @@ msgid ""
 "leave later and are open 24 hours a day. Please review the list of services "
 "offered by this particular property to confirm they are available."
 msgstr ""
+"Essa é a hora que o seu quarto estará disponível no dia de sua chegada e o "
+"tempo que você irá precisar para deixar o seu quarto no dia da sua partida. "
+"Muitas propriedades irão guardar a sua bagagem em um lugar seguro se você "
+"chegar cedo ou sair depois, e elas estão abertas 24 horas por dia. Por favor "
+"veja a lista de serviços oferecidos por essa propriedade em particular para "
+"confirmar que elas estão disponíveis."
 
 #: ../code/application/views/helpfile/pofields.php:831
-#, fuzzy, php-format
+#, php-format
 msgid "Existing account"
-msgstr "Criar conta"
+msgstr "Conta existente"
 
 #: ../code/application/views/helpfile/pofields.php:832
-#, fuzzy, php-format
+#, php-format
 msgid "Create new account"
-msgstr "Criar conta"
+msgstr "Criar nova conta"
 
 #: ../code/application/views/helpfile/pofields.php:833
 #, php-format
 msgid "New password"
-msgstr ""
+msgstr "Nova senha"
 
 #: ../code/application/views/helpfile/pofields.php:836
 #, php-format
 msgid "Show room types"
-msgstr ""
+msgstr "Mostrar tipos de quartos"
 
 #: ../code/application/views/helpfile/pofields.php:837
 #, php-format
 msgid "Hide room types"
-msgstr ""
+msgstr "Esconder tipos de quartos"
 
 #: ../code/application/views/helpfile/pofields.php:838
 #, php-format
@@ -9630,40 +9634,42 @@ msgid ""
 "We are sorry but the maximum number of favorite properties you can save to "
 "your account is 30"
 msgstr ""
+"Desculpe, mas o máximo de propriedades favoritas que você pode salvar na sua "
+"conta é 30"
 
 #: ../code/application/views/helpfile/pofields.php:839
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "This property has been saved in your \"My account\" section. You can now "
 "easily book it at a later date if you wish."
 msgstr ""
-"Você pode salvar essa propriedade como um favorito na sua conta, assim você "
-"pode facilmente agendar em uma data futura se você quiser."
+"Essa propriedade foi salva na seção \"Minha Conta\". Você pode facilmente "
+"agendá-la em uma data que você queira."
 
 #: ../code/application/views/helpfile/pofields.php:840
-#, fuzzy, php-format
+#, php-format
 msgid "Most Popular Amenities"
-msgstr "Mais Importante"
+msgstr "Serviços Mais Populares"
 
 #: ../code/application/views/helpfile/pofields.php:841
-#, fuzzy, php-format
+#, php-format
 msgid "Most Popular Types"
-msgstr "Mais Importante"
+msgstr "Tipos Mais Populares"
 
 #: ../code/application/views/helpfile/pofields.php:842
-#, fuzzy, php-format
+#, php-format
 msgid "Save"
-msgstr "Atualizar Notas"
+msgstr "Salvar"
 
 #: ../code/application/views/helpfile/pofields.php:843
-#, fuzzy, php-format
+#, php-format
 msgid "Last name"
-msgstr "Primeiro nome"
+msgstr "Último nome"
 
 #: ../code/application/views/helpfile/pofields.php:844
 #, php-format
 msgid "Newsletter subscription"
-msgstr ""
+msgstr "Inscrição na newsletter"
 
 #: ../code/application/views/helpfile/pofields.php~:822
 #, php-format
@@ -9717,35 +9723,29 @@ msgstr ""
 
 #: ../code/application/views/mustache/save_property_dialog.php:19
 #: ../code/application/views/mustache/saved_property_item.php:11
-#, fuzzy
 msgid "Arrival:"
-msgstr "Dia da chegada"
+msgstr "Chegada:"
 
 #: ../code/application/views/mustache/save_property_dialog.php:25
 #: ../code/application/views/mustache/saved_property_item.php:11
-#, fuzzy
 msgid "Number of nights:"
-msgstr "Número de hóspedes"
+msgstr "Número de noites:"
 
 #: ../code/application/views/mustache/save_property_dialog.php:38
-#, fuzzy
 msgid "character left"
 msgstr "Caracteres faltantes:"
 
 #: ../code/application/views/mustache/save_property_dialog.php:39
-#, fuzzy
 msgid "characters left"
 msgstr "Caracteres faltantes:"
 
 #: ../code/application/views/mustache/save_property_dialog.php:45
-#, fuzzy
 msgid "Update Note"
 msgstr "Atualizar Notas"
 
 #: ../code/application/views/mustache/save_property_dialog.php:50
-#, fuzzy
 msgid "Save Note"
-msgstr "Atualizar Notas"
+msgstr "Salvar anotação"
 
 #: ../code/application/views/mustache/property_list.php:9
 msgid "Info"
@@ -9811,39 +9811,33 @@ msgid "Accept terms and conditions agreement to proceed"
 msgstr "Aceitar os termos e condições de contrato para continuar"
 
 #: ../code/application/controllers/cmain.php:2285
-#, fuzzy
 msgid "Please log in"
-msgstr "Por favor aguarde"
+msgstr "Por favor faça login"
 
 #: ../code/application/controllers/cmain.php:2311
-#, fuzzy
 msgid "Invalid property"
-msgstr "formato inválido"
+msgstr "Propriedade inválida:"
 
 #: ../code/application/controllers/cmain.php:2349
-#, fuzzy
 msgid "Property not found"
-msgstr "Número da Propriedade"
+msgstr "Propriedade não encontrada:"
 
 #: ../code/application/controllers/cmain.php:2358
-#, fuzzy
 msgid "Property is favorite already"
-msgstr "Salvar essa propriedade como favorito"
+msgstr "A propriedade já está nos favoritos"
 
 #: ../code/application/controllers/cmain.php:2367
-#, fuzzy
 msgid "Invalid number of nights"
-msgstr "Número de telefone inválido"
+msgstr "Número de noites inválido"
 
 #: ../code/application/controllers/cmain.php:2384
-#, fuzzy
 msgid "Invalid date"
-msgstr "formato inválido"
+msgstr "Data inválida"
 
 #: ../code/application/controllers/cmain.php:2391
 #, php-format
 msgid "Notes are exceeding maximum of %d chars"
-msgstr ""
+msgstr "As anotações excederam o máximo de %d caracteres"
 
 #: ../code/application/controllers/chostelbk.php:299
 #: ../code/application/controllers/chostelbk.php:337
