--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-30 17:44+0300\n"
-"PO-Revision-Date: 2013-05-29 22:22+0200\n"
+"PO-Revision-Date: 2013-05-30 22:27+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9465,29 +9464,29 @@ msgid "Newsletter subscription"
 msgstr "Iscrizione alla newsletter"
 
 #: ../code/application/views/helpfile/pofields.php:845
-#, fuzzy, php-format
+#, php-format
 msgid "Show properties"
-msgstr "Mostra altro"
+msgstr "Mostra le proprietà"
 
 #: ../code/application/views/helpfile/pofields.php:846
-#, fuzzy, php-format
+#, php-format
 msgid "Best price"
-msgstr "Cucina Ospiti"
+msgstr "Miglior prezzo"
 
 #: ../code/application/views/helpfile/pofields.php:847
-#, fuzzy, php-format
+#, php-format
 msgid "Best location"
-msgstr "Ubicazione"
+msgstr "Migliore posizione"
 
 #: ../code/application/views/helpfile/pofields.php:848
-#, fuzzy, php-format
+#, php-format
 msgid "Safest"
-msgstr "Sicurezza"
+msgstr "Il più sicuro"
 
 #: ../code/application/views/helpfile/pofields.php:849
 #, php-format
 msgid "Best rating"
-msgstr ""
+msgstr "Miglior rating "
 
 #: ../code/application/views/helpfile/pofields.php:850
 #, fuzzy, php-format
@@ -9525,9 +9524,9 @@ msgid "Redo search in map"
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:857
-#, fuzzy, php-format
+#, php-format
 msgid "%d Bed Female Dorm Shared Bathroom"
-msgstr "Stanza privata per %d persone con bagno in comune"
+msgstr "Dormitorio famminile con %d letti e bagno in comune"
 
 #: ../code/application/views/property_rooms_avail.php:413
 #, php-format
