--- a/languages/ci/locale/pt_PT/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pt_PT/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-30 17:44+0300\n"
-"PO-Revision-Date: 2013-05-29 22:33+0200\n"
+"PO-Revision-Date: 2013-05-30 22:30+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -9432,29 +9432,29 @@ msgid "Newsletter subscription"
 msgstr "Inscrição na newsletter"
 
 #: ../code/application/views/helpfile/pofields.php:845
-#, fuzzy, php-format
+#, php-format
 msgid "Show properties"
-msgstr "Mostrar mais"
+msgstr "Mostrar propriedades"
 
 #: ../code/application/views/helpfile/pofields.php:846
-#, fuzzy, php-format
+#, php-format
 msgid "Best price"
-msgstr "Cozinha para hóspede"
+msgstr "Melhor preço"
 
 #: ../code/application/views/helpfile/pofields.php:847
-#, fuzzy, php-format
+#, php-format
 msgid "Best location"
-msgstr "Localização"
+msgstr "Melhor localização"
 
 #: ../code/application/views/helpfile/pofields.php:848
-#, fuzzy, php-format
+#, php-format
 msgid "Safest"
-msgstr "Segurança"
+msgstr "Mais seguro"
 
 #: ../code/application/views/helpfile/pofields.php:849
 #, php-format
 msgid "Best rating"
-msgstr ""
+msgstr "Melhor avaliação"
 
 #: ../code/application/views/helpfile/pofields.php:850
 #, fuzzy, php-format
@@ -9492,9 +9492,9 @@ msgid "Redo search in map"
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:857
-#, fuzzy, php-format
+#, php-format
 msgid "%d Bed Female Dorm Shared Bathroom"
-msgstr "%d Camas Individuais com Banheiro Compartilhado"
+msgstr "%d Camas em Dormitório Feminino com Banheiro Compartilhado"
 
 #: ../code/application/views/property_rooms_avail.php:413
 #, php-format
