--- a/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-30 17:44+0300\n"
-"PO-Revision-Date: 2013-05-29 22:07+0200\n"
+"PO-Revision-Date: 2013-05-30 22:20+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9466,54 +9465,54 @@ msgid "Newsletter subscription"
 msgstr "Newsletter-Abonnement"
 
 #: ../code/application/views/helpfile/pofields.php:845
-#, fuzzy, php-format
+#, php-format
 msgid "Show properties"
-msgstr "Mehr anzeigen"
+msgstr "Immobilien anzeigen"
 
 #: ../code/application/views/helpfile/pofields.php:846
-#, fuzzy, php-format
+#, php-format
 msgid "Best price"
-msgstr "Gästeküche"
+msgstr "Bester Preis"
 
 #: ../code/application/views/helpfile/pofields.php:847
-#, fuzzy, php-format
+#, php-format
 msgid "Best location"
-msgstr "Ort"
+msgstr "Ideale Lage"
 
 #: ../code/application/views/helpfile/pofields.php:848
-#, fuzzy, php-format
+#, php-format
 msgid "Safest"
-msgstr "Sicherheit"
+msgstr "Am sichersten"
 
 #: ../code/application/views/helpfile/pofields.php:849
 #, php-format
 msgid "Best rating"
-msgstr ""
+msgstr "Bestes Feedback"
 
 #: ../code/application/views/helpfile/pofields.php:850
-#, fuzzy, php-format
+#, php-format
 msgid "Great location"
-msgstr "Ort"
+msgstr "Tolle Lage"
 
 #: ../code/application/views/helpfile/pofields.php:851
-#, fuzzy, php-format
+#, php-format
 msgid "Good location"
-msgstr "Ort"
+msgstr "Gute Lage"
 
 #: ../code/application/views/helpfile/pofields.php:852
-#, fuzzy, php-format
+#, php-format
 msgid "Safe"
-msgstr "Sicherheit"
+msgstr "Sicher"
 
 #: ../code/application/views/helpfile/pofields.php:853
 #, php-format
 msgid "Very safe"
-msgstr ""
+msgstr "Sehr sicher"
 
 #: ../code/application/views/helpfile/pofields.php:854
-#, fuzzy, php-format
+#, php-format
 msgid "Youth hostels only"
-msgstr "Hostel / Jugendherberge"
+msgstr "Nur Jugendherbergen"
 
 #: ../code/application/views/helpfile/pofields.php:855
 #, php-format
@@ -9526,9 +9525,9 @@ msgid "Redo search in map"
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:857
-#, fuzzy, php-format
+#, php-format
 msgid "%d Bed Female Dorm Shared Bathroom"
-msgstr "%d private Schlafzimmer für 7 Personen mit einem geteilten Badezimmer"
+msgstr "%d-Betten weibliches Mehrbettzimmer mit geteiltem Bad"
 
 #: ../code/application/views/property_rooms_avail.php:413
 #, php-format
