--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-30 17:44+0300\n"
-"PO-Revision-Date: 2013-05-29 22:05+0200\n"
+"PO-Revision-Date: 2013-05-30 22:19+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9360,29 +9359,29 @@ msgid "Newsletter subscription"
 msgstr "Feliratkozás hírlevélre"
 
 #: ../code/application/views/helpfile/pofields.php:845
-#, fuzzy, php-format
+#, php-format
 msgid "Show properties"
-msgstr "Mutasson Többet"
+msgstr "Mutassa az ingatlanokat"
 
 #: ../code/application/views/helpfile/pofields.php:846
-#, fuzzy, php-format
+#, php-format
 msgid "Best price"
-msgstr "Vendég konyha"
+msgstr "Legjobb ár"
 
 #: ../code/application/views/helpfile/pofields.php:847
-#, fuzzy, php-format
+#, php-format
 msgid "Best location"
-msgstr "Helyszín"
+msgstr "Legjobb helyszín"
 
 #: ../code/application/views/helpfile/pofields.php:848
-#, fuzzy, php-format
+#, php-format
 msgid "Safest"
-msgstr "Biztonság"
+msgstr "Legbiztonságosabb"
 
 #: ../code/application/views/helpfile/pofields.php:849
 #, php-format
 msgid "Best rating"
-msgstr ""
+msgstr "Legjobb értékelés"
 
 #: ../code/application/views/helpfile/pofields.php:850
 #, fuzzy, php-format
@@ -9420,9 +9419,9 @@ msgid "Redo search in map"
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:857
-#, fuzzy, php-format
+#, php-format
 msgid "%d Bed Female Dorm Shared Bathroom"
-msgstr "%d egyéni szállás közös fürdőszobával"
+msgstr "Női kollégiumi lakosztály %d fő részére, közös fürdőszobával"
 
 #: ../code/application/views/property_rooms_avail.php:413
 #, php-format
