--- a/languages/ci/locale/en_GB/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/en_GB/LC_MESSAGES/auberge_lang.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-30 17:44+0300\n"
-"PO-Revision-Date: 2013-05-27 18:02-0800\n"
-"Last-Translator: Mc web <info@mcwebmanagement.com>\n"
+"PO-Revision-Date: 2013-06-01 20:53+0200\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9362,9 +9361,9 @@ msgid "Newsletter subscription"
 msgstr "Newsletter subscription"
 
 #: ../code/application/views/helpfile/pofields.php:845
-#, fuzzy, php-format
+#, php-format
 msgid "Show properties"
-msgstr "Show More"
+msgstr "Show properties"
 
 #: ../code/application/views/helpfile/pofields.php:846
 #, fuzzy, php-format
