--- a/languages/ci/locale/en_NZ/LC_MESSAGES/auberge_lang_yh_nz.po
+++ b/languages/ci/locale/en_NZ/LC_MESSAGES/auberge_lang_yh_nz.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-30 17:44+0300\n"
-"PO-Revision-Date: 2013-02-28 22:57+0200\n"
+"PO-Revision-Date: 2013-06-01 20:53+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9163,7 +9162,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:845
 #, php-format
 msgid "Show properties"
-msgstr ""
+msgstr "Show properties"
 
 #: ../code/application/views/helpfile/pofields.php:846
 #, php-format
